--- a/src/components/Column/Column.css
+++ b/src/components/Column/Column.css
@@ -2,10 +2,11 @@
 .column{
     background: white;
     opacity: 0.7;
-    width: 1.2rem;
+    width: 19.5rem;
     height: 500px;
     border-radius: 10px;
     margin-top: 3%;
+    border: 1px solid black;
   
   }
   
