--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,93 +1,105 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  @import url('https://fonts.googleapis.com/css?family=Bangers&display=swap');
-  html {
-    font-size: 10px;
-    min-height: 100vh;
-    font-family: 'Bangers';
-    min-height: 100vh;
-  }
-  body {
-    min-height: 100vh;
-  }
-  
-  .App {
-    padding: 2rem;
-    transition: margin-left 2.7s;
-    overflow: hidden;
-    width: 100%;
-  }
-  
-  ul,
-  li {
-    list-style: none;
-  }
-  
-  a {
-    text-decoration: none;
-  }
-  
-  nav a {
-    display: flex;
-  }
-  aside {
-    font-size: 1.5rem;
-    transition: all 300ms ease-in-out;
-  }
-  
-  nav {
-    background: #333;
-    color: #fff;
-    height: 100%;
-    width: 0;
-    position: fixed;
-    top: 0;
-    left: 0;
-    opacity: 0.9;
-    overflow-x: hidden;
-    padding-top: 60px;
-    /* transition: 0.7s all ease-in-out; */
-  }
-  
-  .opneSidebar {
-    transition: 0.7s;
-    width: 230px;
-  }
-  
-  #close {
-    font-size: 4.3rem;
-    position: absolute;
-    right: 2rem;
-    top: 1rem;
-  }
-  
-  .to-right {
-    /* margin-left: 220px; */
-    margin-left: 250px;
-    transition: all 300ms ease-in-out;
-  }
-  
-  .navlist {
-    padding: 1rem 3rem;
-  }
-  .navlist li {
-    margin: 1rem 0;
-    transition: all 300ms ease-in-out;
-  }
-  .navlist li a {
-    color: #fff;
-    font-size: 2rem;
-    transition: all 300ms ease-in-out;
-  }
-  
-  .navlist li a:hover {
-    color: #2748b4;
-    padding: 0.3rem 0.2rem;
-    border-bottom: #2748b4 2px solid;
-    width: 50%;
-  }
-  
+.sidebar {
+  position: fixed;
+  background-color: black;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  min-height: 100vh !important;
+  z-index: 100;
+  padding: 48px 0 0;
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+  width: 12rem;
+}
+
+.sidebarsmall {
+  position: fixed;
+  background-color: black;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  min-height: 100vh !important;
+  z-index: 100;
+  padding: 48px 0 0;
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+  width: 3rem;
+}
+
+#sidebar-wrapper{
+  min-height: 100vh !important;
+  width: 100vw;
+  margin-left: -1rem;
+  -webkit-transition: margin .25s ease-out;
+  -moz-transition: margin .25s ease-out;
+  -o-transition: margin .25s ease-out;
+  transition: margin .25s ease-out;
+}
+#sidebar-wrapper .sidebar-heading {
+  padding: 0.875rem 1.25rem;
+  font-size: 1.2rem;
+}
+
+#page-content-wrapper {
+  min-width: 0;
+  width: 100%;
+}
+
+.navlink{
+  list-style-type: none;
+  color:white;
+  text-decoration: none;
+  font-size: 1.05rem;
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  font-weight: bold;
+}
+
+.icones{
+  font-size: 1.6rem;
+  margin-left: 4%;
+  color:white;
+}
+
+.iconessmall{
+  font-size: 1.6rem;
+  margin-left: 15%;
+  color:white;
+} 
+
+.sidebar-sticky{
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+
+
+.divlogout{
+  margin-top: 14rem;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+}
+
+.divlink{
+  height: 3rem;
+  display: flex;
+  align-items: center;
+}
+
+.divlink:hover{
+  background-color: blue;
+  font-weight: bold;
+}
+
+.divlogout:hover{
+  background-color: blue;
+}
+
+.logo{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+
+
