--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -10,23 +10,28 @@
     width:100%;
     margin-top:8%;
 }
+
 .form{
     background-color: WHITE;
-  width: 70%;
-  margin-left: auto;
-  margin-right: auto;
-  color:black;
-  font-size: 18px;
-  margin-top: 10%;
+    opacity: 0.7;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+    height: 800px;
+    color:black;
+    box-shadow: 0 3px 10px black;
+    font-size: 20px;
 }
 
 .group{
     margin-left: 8%;
-  margin-right: 8%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  gap: 1rem;
+    margin-right: 8%;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 1rem;
 }
 
 .mb-3{
@@ -42,10 +47,10 @@
     margin-left: 20%;
     border-radius: 10px;
     height: 30px;
-  }
+}
 
 .img2{
-    width:20%;
+    width:25%;
 }
 
 .account{
@@ -58,6 +63,19 @@ h5{
     text-align: right;
 }
 
-.container{
+body{
     background: linear-gradient(to right, #A9BCD0, #D8DBE2);
+
+}
+
+h5{
+    margin-right: 8%;
+}
+
+.label{
+    font-size: 16px;
+}
+
+.label-first{
+    font-size: 19px;
 }
