--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -1,8 +1,49 @@
 .button{
     background-color: #263A69;
+    opacity: 1;
+    border: none;
+    width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    font-weight: bold;
+    font-size: 17px;
 }
 
-.container{
+.button:hover{
+    cursor: pointer;
+}
+
+body{
     background: linear-gradient(to right, #A9BCD0, #D8DBE2);
 
 }
+
+.containercards{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+}
+
+.card{
+    width: 40vh;
+    margin-left: 25%;
+    border-radius: 10px;
+    border: 10px solid GREY;
+    opacity: 0.7;
+    box-shadow: 5px 5px 3px 3px black;
+}
+
+.img{
+    width: 85%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 5px;
+}
+
+.title{
+    font-size: 20px;
+    font-weight: bold;
+}
+
