--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,3 +1,6 @@
+body{
+    font-family: 'Roboto Condensed', sans-serif;
+}
 .divrow{
     display:flex;
     flex-direction:row;
@@ -22,7 +25,7 @@
 .form{
     background-color: WHITE;
     opacity: 0.7;
-    width: 60%;
+
     margin-left: auto;
     margin-right: auto;
     margin-top: 10%;
@@ -86,4 +89,37 @@ h5{
 
 .label-first{
     font-size: 19px;
+}
+
+.signup-content{
+    width: 50%;
+    margin-top: -5%;
+    margin-left: 6%;
+    opacity: 0.8;
+}
+
+.maintitle{
+ font-size: 30px;
+}
+
+.subtitle{
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    font-size: 30px;
+    margin-top:-5%;
+}
+
+.paragraphe{
+    font-size: 15px;
+}
+
+.texttitle{
+}
+
+.navbar{
+    display:grid;
+    grid-template-columns: repeat(5,1fr);
+    background-color: white;
+    color:Black;
 }
