--- a/src/pages/Board/Board.css
+++ b/src/pages/Board/Board.css
@@ -21,7 +21,6 @@ body{
   border-radius: 15px;
   background-color: black;
   width: 80%;
-  margin: 0 auto;
 
 }
 
@@ -75,29 +74,32 @@ span a:hover{
 .btn-add{
   display: flex;
   flex-direction: row;
-  background-color: #21325E;
+  background-color: black;
   align-items: center;
   justify-content: center;
   color:white;
-  border: 1px solid#21325E;
-  border-radius: 5px;
+  border: 1px solid black;
+  border-radius: 10px;
   width: 10rem;
   height: 3.5rem;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 5%;
   font-size: 20px;
   font-weight: bold;
   font-size: 24px;
-
+  position: sticky;
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 .btn-add:hover{
-  background-color:black;
+  background-color:white;
+  color:black;
+  border: 2px solid white;
   cursor:pointer;
   width: 10.5rem;
   height: 4rem;
-  font-size: 22px;
+  font-size: 25px;
 }
 
 .submit-btn{
