--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -2,7 +2,7 @@
     background-color: #263A69;
     opacity: 1;
     border: none;
-    width: 50%;
+    width: 80%;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -10,8 +10,11 @@
     font-size: 17px;
 }
 
+
 .text{
     color: white;
+    display: flex;
+    flex-direction: row;
 }
 
 .button:hover{
@@ -34,9 +37,14 @@ body{
     width: 40vh;
     margin-left: 25%;
     border-radius: 10px;
-    border: 10px solid GREY;
+    border: 10px solid black;
     opacity: 0.7;
     box-shadow: 5px 5px 3px 3px black;
+    background-color: black;
+}
+
+.content{
+    margin-left: 10%;
 }
 
 .img{
@@ -48,8 +56,10 @@ body{
 }
 
 .title{
-    font-size: 20px;
+    font-size: 25px;
     font-weight: bold;
+    color: white;
+    text-align: center;
 }
 
 .create{
