--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -12,7 +12,6 @@ body{
   }
   
 .form{
-    margin-top: 2%;
     background-color: WHITE;
     opacity: 0.7;
     width: 40%;
@@ -54,7 +53,7 @@ body{
   }
 
 .signup{
-  margin-top: -7%;
+  margin-top: -12%;
 }
 
 .label{
@@ -65,5 +64,6 @@ body{
 .container {
   width: 700px;
   position: relative;
-  margin: 0 auto; }
+  margin: 0 auto; 
+}
 
