--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,14 @@
   color: #61dafb;
 }
 
+
+.back{
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,3 +44,5 @@
     transform: rotate(360deg);
   }
 }
+
+
