--- a/src/pages/Board/Board.css
+++ b/src/pages/Board/Board.css
@@ -20,8 +20,8 @@ body{
 .cards{
   border-radius: 15px;
   background-color: black;
-  width: 80%;
-
+  width: 100%;
+  margin-top: 2%;
 }
 
 .columns{
