--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -48,10 +48,9 @@ body{
 }
 
 .img{
-    width: 85%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    width: 20rem;
+    margin-top: 20%;
+    text-align: center;
     border-radius: 5px;
 }
 
