--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -87,12 +87,12 @@
 }
 
 .divlink:hover{
-  background-color: blue;
+  background-color: purple;
   font-weight: bold;
 }
 
 .divlogout:hover{
-  background-color: blue;
+  background-color: purple;
 }
 
 .logo{
