--- a/src/pages/Board/Board.css
+++ b/src/pages/Board/Board.css
@@ -1,115 +1,32 @@
-body{
-  background-image: "url('/citywallpaper.jpeg')" ;
+.smooth-dnd-container.horizontal {
+  margin-left: 10rem;
 }
 
-.divcontainer{
+.smooth-dnd-draggable-wrapper{
+  margin-left: 1%;
+}
+
+.hlfXkk{
+  background: white;
+}
+
+.pagetitle{
+  height: 6rem;
   display:flex;
-  justify-content: center;
-  height: 100%;
+  flex-direction:row;
+  justify-content: end;
+  gap: 6%;
+  margin-top: -20px;
 }
 
-.tasks{
-  color:black;
+.searchfield{
+  margin-top: 9%;
 }
 
-.columns{
-  border-radius: 15px;
+.searchicon{
+  margin-top: 15%;
+  font-size: 35px;
 }
-
-
-.cards{
-  border-radius: 15px;
-  background-color: black;
-  width: 100%;
-  margin-top: 2%;
-}
-
-.columns{
-
-}
-
-span{
-  position: relative;
-  display: inline-flex;
-  width: 180px;
-  height: 55px;
-  margin: 0 15px;
-  perspective: 1000px;
-}
-span a{
-  font-size: 19px;
-  letter-spacing: 1px;
-  transform-style: preserve-3d;
-  transform: translateZ(-25px);
-  transition: transform .25s;
-  font-family: 'Montserrat', sans-serif;
-  
-}
-span a:before,
-span a:after{
-  position: absolute;
-  content: "BUTTON";
-  height: 55px;
-  width: 180px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 5px solid black;
-  box-sizing: border-box;
-  border-radius: 5px;
-}
-span a:before{
-  color: #fff;
-  background: #000;
-  transform: rotateY(0deg) translateZ(25px);
-}
-span a:after{
-  color: #000;
-  transform: rotateX(90deg) translateZ(25px);
-}
-span a:hover{
-  transform: translateZ(-25px) rotateX(-90deg);
-}
-
-.btn-add{
-  display: flex;
-  flex-direction: row;
-  background-color: black;
-  align-items: center;
-  justify-content: center;
-  color:white;
-  border: 1px solid black;
-  border-radius: 10px;
-  width: 10rem;
-  height: 3.5rem;
-  margin-left: auto;
-  margin-right: auto;
-  font-size: 20px;
-  font-weight: bold;
-  font-size: 24px;
-  position: sticky;
-  margin-top: 5%;
-  margin-bottom: 5%;
-}
-
-.btn-add:hover{
-  background-color:white;
-  color:black;
-  border: 2px solid white;
-  cursor:pointer;
-  width: 10.5rem;
-  height: 4rem;
-  font-size: 25px;
-}
-
-.submit-btn{
-  cursor:pointer;
-  position: fixed;
-
-}
-
-.limitedate{
-  display: flex;
-  flex-direction: row;
-  gap: 5%;
+.divsearch{
+  margin-right: 12%;
 }
