--- a/src/pages/Board/Board.css
+++ b/src/pages/Board/Board.css
@@ -1,14 +1,19 @@
 .smooth-dnd-container.horizontal {
-  margin-left: 10rem;
+  margin-left: 7rem;
 }
 
 .smooth-dnd-draggable-wrapper{
   margin-left: 1%;
 }
 
-.hlfXkk{
-  background: white;
+#addtask{
+  margin-top: 20px;
 }
+
+body{
+  height: 49rem;
+}
+
 
 .pagetitle{
   height: 6rem;
@@ -17,16 +22,63 @@
   justify-content: end;
   gap: 6%;
   margin-top: -20px;
+  margin-right: 8rem ;
+  font-weight: bold;
 }
 
-.searchfield{
-  margin-top: 9%;
+.divtoggle{
+  margin-top: 20px;
+  margin-right: 20px;
 }
 
-.searchicon{
-  margin-top: 15%;
-  font-size: 35px;
+.fas fa-sun{
+  margin-left: 10px ;
 }
-.divsearch{
-  margin-right: 12%;
+
+.sectionBoard{
+  background-image: url("../../assets/background.jpeg");
+  background-size: cover;
+  margin-top: -2rem;
 }
+
+.smooth-dnd-draggable-wrapper{
+  margin-top: 5px;
+  opacity: 1;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.checkbox {
+  opacity: 0;
+  position: absolute;
+}
+
+.label {
+  width: 50px;
+  height: 26px;
+  background-color:white;
+  display: flex;
+  border-radius:50px;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+  position: relative;
+  transform: scale(1.5);
+}
+
+.ball {
+  width: 23px;
+  height: 20px;
+  background-color: black;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  border-radius: 50%;
+  transition: transform 0.2s linear;
+}
+
+/*  target the elemenent after the label*/
+.checkbox:checked + .label .ball{
+  transform: translateX(24px);
+}
+
+
