--- a/src/pages/Board/Board.css
+++ b/src/pages/Board/Board.css
@@ -7,11 +7,26 @@
 }
 
 #addtask{
-  margin-top: 20px;
+  height: 2.8rem;
+  width: 9rem;
+  font-size: 110%;
+  font-weight: bold;
+}
+
+.switch{
+  margin-top: 0.8rem;
 }
 
 body{
   height: 49rem;
+}
+
+.divnew{
+  display: flex;
+  flex-direction: row;
+  gap: 5rem;
+  margin-top: 1.8rem;
+  margin-right: 5rem;
 }
 
 
@@ -20,11 +35,10 @@ body{
   display:flex;
   flex-direction:row;
   justify-content: end;
-  gap: 6%;
-  margin-top: -20px;
-  margin-right: 8rem ;
+  gap: 2rem;
   font-weight: bold;
 }
+
 
 .divtoggle{
   margin-top: 20px;
@@ -35,8 +49,20 @@ body{
   margin-left: 10px ;
 }
 
-.sectionBoard{
+#dark{
   background-image: url("../../assets/background.jpeg");
+}
+
+#light{
+ background-image: url("../../assets/backgroundd.png");
+}
+
+.switch{
+  display: flex;
+  flex-direction: row;
+}
+
+.sectionBoard{
   background-size: cover;
   margin-top: -2rem;
 }
@@ -81,4 +107,11 @@ body{
   transform: translateX(24px);
 }
 
+#icons{
+  margin-right: 0.4rem;
+  font-size: 20px;
+}
 
+.moon{
+  color:white;
+}
