UI and Swal modifications

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,7 +6,7 @@
 
 .row{
     display:grid;
-    grid-template-columns: repeat(7,1fr);
+    grid-template-columns: repeat(9,1fr);
     grid-template-rows: repeat(1,1fr);
     margin-top: 1.8rem;
     margin-left: 1rem;
@@ -14,6 +14,7 @@
 
 .imglogo{
     width: 90px;
+    margin-left: 1rem;
 }
 
 .bn3{
@@ -30,7 +31,7 @@
 
 .link3{
     margin-left: 0.5rem;
-    grid-column-start: 6;
+    grid-column-start: 8;
 
 }
 
@@ -47,7 +48,7 @@
 }
 
 .link4{
-    grid-column-start: 7;
+    grid-column-start: 9;
 
 }
 
